--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 </div>
                 <div class="nav-product-div">
                     <a class="nav-product" href="#">Products</a>
-                    <i class="fa-solid fa-sort-down" style="position: absolute; left: 0; margin-left: 679px;"></i>
+                    <i class="fa-solid fa-sort-down" style="position: absolute; left: 0; margin-left: 679px; background-color: transparent;"></i>
                 </div>
                 <div class="nav-english-div">
                     <i class="fa-solid fa-globe" style="position: absolute; margin-left: 710px; padding-left: 20px; padding-right: 10px; padding-bottom: 34px; padding-top: 30px; top: 0; cursor: pointer;"></i>
                     <a class="nav-english" href="#">English</a>
-                    <i class="fa-solid fa-sort-down" style="position: absolute; right: 0; margin-right: 398px; cursor: pointer;""></i>
+                    <i class="fa-solid fa-sort-down" style="position: absolute; right: 0; margin-right: 380px; cursor: pointer; background-color: transparent;"></i>
                 </div>
                 <div class="nav-login-div">
                     <a class="nav-login" href="#">Log in</a>
