--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                     <i class="fa-solid fa-sort-down" style="position: absolute; left: 0; margin-left: 679px; background-color: transparent;"></i>
                 </div>
                 <div class="nav-english-div">
-                    <i class="fa-solid fa-globe" style="position: absolute; margin-left: 710px; padding-left: 20px; padding-right: 10px; padding-bottom: 34px; padding-top: 30px; top: 0; cursor: pointer;"></i>
+                    <i class="fa-solid fa-globe" style="position: absolute; margin-left: 715px; padding-left: 20px; padding-right: 10px; padding-bottom: 34px; padding-top: 30px; top: 0; cursor: pointer; z-index:99999 ; background: none;"></i>
                     <a class="nav-english" href="#">English</a>
-                    <i class="fa-solid fa-sort-down" style="position: absolute; right: 0; margin-right: 380px; cursor: pointer; background-color: transparent;"></i>
+                    <i class="fa-solid fa-sort-down" style="position: absolute; right: 0; margin-right: 375px; cursor: pointer; background-color: transparent;"></i>
                 </div>
                 <div class="nav-login-div">
                     <a class="nav-login" href="#">Log in</a>
@@ -245,7 +245,7 @@
                 <p class="question-author-2-1"><small>School edition user</small></p>
             </div>
             <div class="flex-column">
-                <img src="images\quote.png" class="question-image-2">
+                <img src="images\double-quotes.png" class="question-image-2">
                 <p class="question-2"><small>I just wanted to send a note that I have been learning Dvorak through Typing Club and am incredibly impressed at the superior interface and insightful passages (learning while typing) that are both free and online. I think the website has shaved weeks off an otherwise-arduous Dvorak learning experience, and I am thankful that it made it so pleasant and fun as well. Keep up the great work, and I’m excited to see what else edclub comes up with next!</small></p>
                 <p class="question-author-1-2">Annie Sun</p>
                 <p class="question-author-2-2"><small>School edition user</small></p>
